<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#f2f2f2">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="#f8f8f8"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/mulai"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="28dp
"
            android:background="@drawable/button_oval"
            android:fontFamily="@font/nunito_bold"
            android:textAllCaps="false"
            android:text="@string/tombol_mulai"
            android:textSize="8pt" />
    </FrameLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logoawal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="205dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/judul"
        android:textAllCaps="true"
        android:textColor="#202020"
        android:textSize="8pt"
        android:textStyle="bold" />

</RelativeLayout>